--- a/css/nav.css
+++ b/css/nav.css
@@ -82,4 +82,60 @@
     display: none;
 }
 
+.menu a,
+.menu .dropdown-menu a {
+    font-size: 16px;
+}
+.input-group{
+    width: 95%;
+}
+/* 태블릿 크기 */
+@media (max-width: 720px) {
+    .menu a,
+    .menu .dropdown-menu a {
+        font-size: 16px; /* 태블릿에서 글자 크기 조정 */
+    }
+    .input-group input {
+        font-size: 13px; /* 텍스트 상자 폰트 크기 */
+        padding: 4px 8px; /* 텍스트 상자 패딩 */
+    }
+    .input-group button {
+        font-size: 14px; /* 버튼 폰트 크기 */
+        padding: 4px 8px; /* 버튼 패딩 */
+    }
+    .input-group button.btn-sm {
+        font-size: 12px; /* 작은 폰트 크기를 조정 */
+        padding: 6px 10px; /* 작은 패딩을 조정 */
+    }
+    .search-icon{
+        float: right;
+    }
+    .input-group{
+        width: 90%;
+        float: right;
+    }
+    
+}
 
+/* 핸드폰 크기 */
+@media (max-width: 549px) {
+    .menu a,
+    .menu .dropdown-menu a {
+        font-size: 14px; /* 핸드폰에서 글자 크기 추가로 조정 */
+    }
+    .bi,
+    .search-icon {
+        font-size: 14px; /* 핸드폰에서 아이콘 크기 추가로 조정 */
+    }
+    .input-group input.form-control-sm {
+        font-size: 12px; /* 작은 폰트 크기를 조정 */
+        padding: 6px 10px; /* 작은 패딩을 조정 */
+    }
+    .input-group button {
+        font-size: 12px; /* 버튼 폰트 크기 */
+    }
+    .input-group{
+        width: 70%;
+        float: right;
+    }
+}
