--- a/css/gameplay.css
+++ b/css/gameplay.css
@@ -1,76 +1,97 @@
 main{
-    margin: 0 auto;
-    margin-top: calc(44px + 100px);
-    margin-bottom: 100px;
+  margin: 0 auto;
+  margin-top: calc(44px + 100px);
+  margin-bottom: 100px;
 }
 /*게임 title, img*/
 .image-info-groups {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+padding-bottom: 50px;
+border-bottom: 1px solid #0A1128;
+}
 
-  }
-  
-  .book-image img {
-    width: 100%;
-    max-width: 100%; /* Ensures the image does not exceed its original size */
-  }
-  
-  
+.book-image{
+width: 100%;
+height: 100%;
+}
+
+.book-image img {
+width: 100%;
+height: 100%;
+object-fit: cover;
+}
+
+.info{
+width: 100%;
+display: flex;
+justify-content: left;
+text-align: left;
+align-items: flex-start;
+}
+
+.write {
+  margin-top: 30px;
+}  
 /*댓글입력 받는 부분*/
 .comment-reg{
-    border: solid 3px black;
+border: solid 3px rgb(0, 0, 0);
 }
 
 textarea {
-    width: 90%;
-    height: 6.25em;
-    border: none;
-    resize: none;
-    border: 2px solid rgb(255, 255, 255);
-    outline-color: #ffffff;
-  }
-  .row{
-    border-top: solid #0A1128 3px ;
-  }
+width: 90%;
+height: 6.25em;
+border: none;
+resize: none;
+outline-color: #ffffff;
+}
 
-  .comment-button {
-    border-left: solid #0A1128 3px;
-    color: #0A1128;
-    background-color: #CCCCCC;
-    width: 100%;
-    border: none; /* 테두리 제거 */
-    outline: none; /* 포커스 시 테두리 제거 */
-  }
+.row{
+display: flex;
+margin-left: 0px;
+border-top: solid #0A1128 3px ;
+width: 100%;
+justify-content: right;
+}
 
-  .comment-button:hover {
-    background-color: #bbb;
-  }
-  
-  
+.comment-button {
+width: 20%;
+color: #0A1128;
+background-color: #CCCCCC;
+border: none; /* 테두리 제거 */
+outline: none; /* 포커스 시 테두리 제거 */
+}
+
+.comment-button:hover {
+background-color: #bbb;
+}
+
+
 /*댓글 보여주는 부분*/
-  .comment-box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 6px;
-    border-radius: 55px; /* 둥근 사각형으로 설정 */
-    transition: width 0.3s;
-    background-color: #0A1128;
-    color: white;
-    
+.comment-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 6px;
+  border-radius: 55px; /* 둥근 사각형으로 설정 */
+  transition: width 0.3s;
+  margin-top: 50px;
+  background-color: #0A1128;
+  color: white;
+  
 }
 
 .profile-image {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
 }
 
 .comment-content {
-    flex: 1;
+  flex: 1;
 }
 
 /* 태블릿 사이즈에 대한 스타일 변경 */
@@ -80,7 +101,7 @@ textarea {
 
 /* 핸드폰 사이즈에 대한 스타일 변경 */
 @media (max-width: 549px) {
-    main{
-        margin-top: calc(44px + 70px);
-    }
+  main{
+      margin-top: calc(44px + 70px);
+  }
 }
