--- a/css/gameplay.css
+++ b/css/gameplay.css
@@ -22,13 +22,13 @@ main{
   border-bottom: 1px solid #ffffff;
 }
   
-.book-image,
-.book-image img{
+.game-image,
+.game-image img{
   width: 100%;
   height: 100%;
 }
 
-.book-image img {
+.game-image img {
   object-fit:fill;
 }
 
@@ -75,15 +75,19 @@ textarea:focus {
   border: solid 2px rgb(255, 255, 255);
 }
 
+.comment-box {
+  width: 900px;
+}
+
 .comment1-box {
   display: flex;
   margin-bottom: 20px;
   align-items: center;
+  justify-content: left;
   border-radius: 55px; /* 둥근 사각형으로 설정 */
   background-color: #a3a3a3;
   padding-right: 30px;
   width: fit-content; /*자기 크기만큼 설정 ⭐⭐⭐*/
-  
 }
 
 .comment-button {
@@ -108,6 +112,7 @@ textarea,
   font-size: 17px;
 }
 
+
 /* 태블릿 사이즈에 대한 스타일 변경 */
 @media (max-width: 950px) {
   .image-info-groups {
@@ -117,7 +122,8 @@ textarea,
 
   .write,
   .comment-reg,
-  .titles {
+  .titles,
+  .comment-box {
     width: 700px;
   } 
 
@@ -137,7 +143,8 @@ textarea,
 
   .write,
   .comment-reg,
-  .titles {
+  .titles,
+  .comment-box {
     width: 480px;
   } 
 
