--- a/css/byera.css
+++ b/css/byera.css
@@ -435,12 +435,13 @@ body {
     .text {
         width: 150px;
         font-size: 14px;
+        margin-bottom: -5px;
     }
 
-    .text:nth-child(n+2) {
-        margin-top: -5px;
+    .text:nth-child(even) {
+        margin-top: 5px;
     }
-    
+
     .photo img {
         width: 80px;
         height: 80px;
